Stereoscopy with Motion Blur crashes in Eevee #96572

Closed
opened 2022-03-17 20:54:59 +01:00 by Zach Bennett · 12 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2070 Super

Blender Version
Broken: 3.1.0
Worked: 3.0.1
Caused by 4e78a7360e

When trying to render, blender crashes while Motion Blur is enabled and Stereoscopy is enabled. This only happens when using Eevee to render, it works in Cycles. This happens with both Stereo 3D and Multiview in the Stereoscopy settings.

Exact steps for others to reproduce the error
#96572.blend
Open file and Render image using Eevee

**System Information** Operating system: Windows 10 Graphics card: RTX 2070 Super **Blender Version** Broken: 3.1.0 Worked: 3.0.1 Caused by 4e78a7360e When trying to render, blender crashes while Motion Blur is enabled and Stereoscopy is enabled. This only happens when using Eevee to render, it works in Cycles. This happens with both Stereo 3D and Multiview in the Stereoscopy settings. **Exact steps for others to reproduce the error** [#96572.blend](https://archive.blender.org/developer/F12932438/T96572.blend) Open file and Render image using Eevee
Author

Added subscriber: @WretchedShrub

Added subscriber: @WretchedShrub

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Trace:

>	blender.exe!BLI_mempool_len(const BLI_mempool * pool) Line 436	C

 	blender.exe!BLI_ghash_free(GHash * gh, void(*)(void *) keyfreefp, void(*)(void *) valfreefp) Line 865	C
 	blender.exe!EEVEE_motion_blur_swap_data(EEVEE_Data * vedata) Line 508	C
 	blender.exe!eevee_render_to_image(void * vedata, RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 569	C
 	blender.exe!DRW_render_to_image(RenderEngine * engine, Depsgraph * depsgraph) Line 1979	C
 	blender.exe!engine_render_view_layer(Render * re, RenderEngine * engine, ViewLayer * view_layer_iter, const bool use_engine, const bool use_grease_pencil) Line 900	C
 	blender.exe!RE_engine_render(Render * re, bool do_all) Line 1021	C
 	blender.exe!do_render_engine(Render * re) Line 1060	C
 	blender.exe!do_render_compositor(Render * re) Line 1198	C
 	blender.exe!do_render_full_pipeline(Render * re) Line 1467	C
 	blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const bool write_still) Line 1868	C
 	blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 661	C++
 	blender.exe!do_job_thread(void * job_v) Line 369	C
 	blender.exe!tslot_thread_start(void * tslot_p) Line 205	C++
 	[External Code]	
Trace: ``` > blender.exe!BLI_mempool_len(const BLI_mempool * pool) Line 436 C blender.exe!BLI_ghash_free(GHash * gh, void(*)(void *) keyfreefp, void(*)(void *) valfreefp) Line 865 C blender.exe!EEVEE_motion_blur_swap_data(EEVEE_Data * vedata) Line 508 C blender.exe!eevee_render_to_image(void * vedata, RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 569 C blender.exe!DRW_render_to_image(RenderEngine * engine, Depsgraph * depsgraph) Line 1979 C blender.exe!engine_render_view_layer(Render * re, RenderEngine * engine, ViewLayer * view_layer_iter, const bool use_engine, const bool use_grease_pencil) Line 900 C blender.exe!RE_engine_render(Render * re, bool do_all) Line 1021 C blender.exe!do_render_engine(Render * re) Line 1060 C blender.exe!do_render_compositor(Render * re) Line 1198 C blender.exe!do_render_full_pipeline(Render * re) Line 1467 C blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const bool write_still) Line 1868 C blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 661 C++ blender.exe!do_job_thread(void * job_v) Line 369 C blender.exe!tslot_thread_start(void * tslot_p) Line 205 C++ [External Code] ```
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Crash introduced after this commit- 4e78a7360e
@JacquesLucke ^

Crash introduced after this commit- 4e78a7360e @JacquesLucke ^
Member

Only had a quick look so far. Asan shows that it is a use-after-free bug: P2840.

Only had a quick look so far. Asan shows that it is a use-after-free bug: [P2840](https://archive.blender.org/developer/P2840.txt).

This issue was referenced by e5487a81a4

This issue was referenced by e5487a81a414e0564a977f442e690f38d9ae4ebf

This issue was referenced by 9ed63ebb45

This issue was referenced by 9ed63ebb458141661bcbfe81c187f843e9dcbacf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-03-21 10:06:19 +01:00
Member

Broken: 3.1.0

@JacquesLucke hi, thanks for the fix. How about backporting this commit for corrective release?

Change appears safe for backporting :)

> Broken: 3.1.0 @JacquesLucke hi, thanks for the fix. How about backporting this commit for corrective release? Change appears safe for backporting :)
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#96572
No description provided.