Fix T96572: eevee crash with motion blur and stereoscopy

This was a use-after-free bug due to dangling pointers.